<resources>
    <string name="app_name">Estacionamiento v1,0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Busqueda_parqueo_btn">BUSQUEDA DE PLAZAS DISPONIBLES</string>
    <string name="Busqueda_Estacionamiento_btn">BUSQUEDA DE ESTACIONAMIENTOS</string>
    <string name="Videos_btn">VIDEOS</string>

    <string name="descripcion_de_parqueos">BUSQUEDA DE PLAZAS DISPONIBLES EN EL PARQUEO</string>
    <string name="descripcion_de_estacionamiento">BUSQUEDA DE ESTACIONAMIENTOS DISPONOBLES</string>
    <string name="descripcion_de_videos">VIDEOS SOBRE DE EDUCACION VIAL Y TRANSITO</string>

</resources>